Hand atualizado, fenetre atualizado